syntax = "proto3";

option csharp_namespace = "IdpServiceFacade";

package auth;

service Auth {
  rpc GetToken (GetTokenRequest) returns (GetTokenResponse);
}

message GetTokenRequest {
  string clientId = 1;
  string clientSecret = 2;
  string audience = 3;
}

message GetTokenResponse {
  bool ok = 1;
  optional string error = 2;
  string accessToken = 3;
}
